--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "kparts-4.99.0.tar.xz": 92ac83f0bd3969e50663bb9697e5214cd4566519
+  kparts-5.0.0.tar.xz: 767777d48076caba6ff838a4535515cfcee4555c
