--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   kparts-5.0.0.tar.xz: 767777d48076caba6ff838a4535515cfcee4555c
+  kparts-5.1.0.tar.xz: ada0955fc87a88f9ce65e3713d7823e993fb2014
